--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Ignorar arquivos de configuração
+application.properties
+config/
+.env
+
 ### STS ###
 .apt_generated
 .classpath
